@@ -45,6 +45,7 @@ Jason Thomas <jason@topic.com.au>
 Jeremy Katz <katzj@redhat.com>
 Jochen Hoenicke <jochen@gnu.org>
 Johannes Kroeger <hanne@squirrel.owl.de>
+John Goerzen <jgoerzen@complete.org>
 John Tobey <spam@john-edwin-tobey.org>
 Josip Rodin <joy@cibalia.gkvk.hr>
 Julien Bordet <julien.bordet@int-evry.fr>
